feat: Part 1 - Stateful Order Fill Matching with Kafka Streams - The Basics